feat(config): 添加应用配置文件和文档向量化服务
- 新增 application.yml、application-dev.yml 和 application-local.yml 配置文件
- 添加 ChunkVectorizationService 实现文档块向量化功能
- 添加 DocumentParseProcessor 处理文档解析和切片任务
- 添加相关单元测试验证向量化和解析逻辑
- 配置 AI 模型参数、存储服务和向量库连接信息
- 设置异步任务执行器和 OCR 文档处理选项